--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,121 @@
 ---
 ---
 
+@inproceedings{zhang2024a,
+  title={A Study of Web Search Assisted Health Decision-Making},
+  author={Kamyar Ghajar and Dake Zhang and Mark D. Smucker and Robin Cohen},
+  booktitle={XXX},
+  abbr={Under Review},
+  year={2024}  
+}
+
+@inproceedings{zhang2024overview,
+  title={Overview of the TREC 2024 Lateral Reading Track},
+  author={Dake Zhang and Mark D. Smucker and Charles L. A. Clarke},
+  booktitle={Text REtrieval Conference (TREC)},
+  year={2024},
+  website={https://trec-lateral-reading.github.io/},
+  code={https://github.com/trec-lateral-reading},
+  abbr={To Appear}
+}
+
+@inproceedings{zhang2023uwaterloomds,
+  title={UWaterlooMDS at TREC 2023: Deep Learning Track and Tip-of-the-Tongue Track},
+  author={Zhang, Dake},
+  booktitle={Text REtrieval Conference (TREC)},
+  bibtex_show={true},
+  pdf={https://trec.nist.gov/pubs/trec32/papers/UWaterlooMDS.DT.pdf},
+  abbr={Unrefereed},
+  year={2023}
+}
+
+@inproceedings{zhang2023readprobe,
+  title={ReadProbe: A Demo of Retrieval-Enhanced Large Language Models to Support Lateral Reading},
+  author={Dake Zhang and Ronak Pradeep},
+  booktitle={arXiv preprint arXiv:2306.07875},
+  selected={true},
+  abbr={Unrefereed},
+  bibtex_show={true},
+  pdf={https://arxiv.org/pdf/2306.07875},
+  code={https://github.com/DakeZhang1998/ReadProbe},
+  award_name={Hackathon Winner},
+  award={First place at the 2023 Canadian #AI Misinformation Hackathon hosted by TMU Social Media Lab: https://socialmedialab.ca/events/hackathon/},
+  year={2023}
+}
+
+@inproceedings{zhang2022uwaterloomds,
+  title={UWaterlooMDS at the TREC 2022 Health Misinformation Track},
+  author={Amir Vakili Tahami and Dake Zhang and Mark D. Smucker},
+  booktitle={Text REtrieval Conference (TREC)},
+  pdf={https://trec.nist.gov/pubs/trec31/papers/UWaterlooMDS.H.pdf},
+  bibtex_show={true},
+  abbr={Unrefereed},
+  year={2022}
+}
+
+@inproceedings{zhang2022reducing,
+  title={Reducing Health Misinformation in Search Results},
+  author={Dake Zhang},
+  booktitle={UWSpace Theses},
+  year={2022},
+  abbr={Thesis},
+  html={https://www.uwspace.uwaterloo.ca/handle/10012/18602},
+  pdf={https://dspacemainprd01.lib.uwaterloo.ca/server/api/core/bitstreams/b32f7b8d-3a39-46ea-bb22-4eac7fa5cc0b/content},
+  bibtex_show={true}
+}
+
+@inproceedings{zhang2022learning,
+  title={Learning Trustworthy Web Sources to Derive Correct Answers and Reduce Health Misinformation in Search},
+  author={Dake Zhang and Amir Vakili Tahami and Mustafa Abualsaud and Mark D. Smucker},
+  booktitle={Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  selected={true},
+  pdf={sigir2022learning.pdf},
+  abbr={Refereed Short},
+  bibtex_show={true},
+  code={https://github.com/DakeZhang1998/ReadProbe},
+  year={2022}
+}
+
+@inproceedings{abualsaud2021uwaterloomds,
+  title={UWaterlooMDS at the TREC 2021 Health Misinformation Track},
+  author={Mustafa Abualsaud and Irene Xiangyi Chen and Kamyar Ghajar and Linh Nhi Phan Minh and Mark D. Smucker and Amir Vakili Tahami and Dake Zhang},
+  booktitle={Text REtrieval Conference (TREC)},
+  bibtex_show={true},
+  abbr={Unrefereed},
+  pdf={https://trec.nist.gov/pubs/trec30/papers/UwaterlooMDS-HM.pdf},
+  year={2021}
+}
+
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+abbr={PhysRev},
+title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
+abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+journal={Phys. Rev.},
+location={New Jersey},
+volume={47},
+issue={10},
+pages={777--780},
+numpages={0},
+year={1935},
+month={May},
+publisher=aps,
+doi={10.1103/PhysRev.47.777},
+url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+pdf={example_pdf.pdf},
+altmetric={248277},
+dimensions={true},
+google_scholar_id={qyhmnyLat1gC},
+video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+annotation={* Example use of superscripts<br>† Albert Einstein},
+selected={true},
+inspirehep_id = {3255}
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
+abstract={This is the abstract text.},
+award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
+award_name={Nobel Prize}
