--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,30 @@
 ---
 ---
+@inproceedings{zhang2025overview,
+  title={Overview of the TREC 2025 DRAGUN Track},
+  author={Dake Zhang and Mark D. Smucker and Charles L. A. Clarke},
+  booktitle={Text REtrieval Conference (TREC)},
+  year={2025},
+  website={https://trec-dragun.github.io/},
+  code={https://github.com/trec-dragun/2025-starter-kit},
+  abbr={To Appear},
+  selected={true}
+}
 
-@inproceedings{zhang2024a,
+@inproceedings{zhang2025a,
   title={A Study of Web Search Assisted Health Decision-Making},
   author={Kamyar Ghajar and Dake Zhang and Mark D. Smucker and Robin Cohen},
-  booktitle={XXX},
+  booktitle={Submission to The Information Retrieval Research Journal},
   abbr={Under Review},
-  year={2024}  
+  year={2025}  
+}
+
+@inproceedings{zhang2025evaluation,
+  title={Evaluation of Question Generation in Support of Trustworthiness Assessment},
+  author={Dake Zhang and Mark D. Smucker and Charles L. A. Clarke},
+  booktitle={Submission to The Information Retrieval Research Journal},
+  abbr={Under Review},
+  year={2025}  
 }
 
 @inproceedings{zhang2024overview,
@@ -15,8 +33,11 @@
   booktitle={Text REtrieval Conference (TREC)},
   year={2024},
   website={https://trec-lateral-reading.github.io/},
-  code={https://github.com/trec-lateral-reading},
-  abbr={To Appear}
+  pdf={https://trec.nist.gov/pubs/trec33/papers/Overview_lateral.pdf},
+  abbr={Unrefereed},
+  selected={true},
+  bibtex_show={true},
+  data={https://pages.nist.gov/trec-browser/trec33/lateral/data/}
 }
 
 @inproceedings{zhang2023uwaterloomds,
@@ -26,7 +47,7 @@
   bibtex_show={true},
   pdf={https://trec.nist.gov/pubs/trec32/papers/UWaterlooMDS.DT.pdf},
   abbr={Unrefereed},
-  year={2023}
+  year={2023},
 }
 
 @inproceedings{zhang2023readprobe,
@@ -73,7 +94,16 @@
   abbr={Refereed Short},
   bibtex_show={true},
   code={https://github.com/DakeZhang1998/ReadProbe},
-  year={2022}
+  year={2022},
+  isbn={9781450387323},
+  publisher={Association for Computing Machinery},
+  address={New York, NY, USA},
+  url={https://doi.org/10.1145/3477495.3531812},
+  doi={10.1145/3477495.3531812},
+  pages={2099–2104},
+  numpages={6},
+  location={Madrid, Spain},
+  series={SIGIR '22}
 }
 
 @inproceedings{abualsaud2021uwaterloomds,
