--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -90,7 +90,7 @@
   author={Dake Zhang and Amir Vakili Tahami and Mustafa Abualsaud and Mark D. Smucker},
   booktitle={Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval},
   selected={true},
-  pdf={sigir2022learning.pdf},
+  pdf={https://zhangdake.tech/assets/pdf/sigir2022learning.pdf},
   abbr={Refereed Short},
   bibtex_show={true},
   code={https://github.com/DakeZhang1998/ReadProbe},
